Istio/Security/authorizationpolicy-allow-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allowall
  namespace: mesh
spec:
  rules:
  - {}
