Istio/Security/authorizationpolicy-deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: denyall
  namespace: mesh
spec: {}
